# plm

./: .env.example  .gitignore  CHANGELOG.md  Codex 的三 Loop 大神工作原則.md  README.md  minimax-duplex-voice-spec-v1.0.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
.loop/: README.md  blockers.md  current-plan.md  progress.json
.loop/coordination/: README.md  command-center.json  thread-a.json  thread-b.json
.loop/decisions/: 0001-governance-and-configuration-priority.md  0002-plm-canonical-repository.md  0003-phase3b-staging-database-contract.md  0004-phase3c-offline-duplex-boundaries.md  0005-gate-db1-local-postgres-execution.md  0006-phase3d-offline-client-protocol-resilience.md  0007-three-thread-coordination-worktree-isolation.md
docker/: Dockerfile  docker-compose.yml
docs/: acceptance-record.md  architecture.md  configuration-reference.md  gate-db1-local-postgres-rls-results.md  latency-budget.md  legacy-audio-lifecycle.md  legacy-voice-call-audit.md  legacy-websocket-protocol.md  liff-staging-frontend-bootstrap.md  line-oa-voice-call-integration-blueprint.md  minimax-spike-results.md  operations.md  phase3b-staging-isolation-results.md  phase3c-offline-duplex-hardening-results.md  phase3d-offline-client-protocol-resilience-results.md  railway-staging-deployment.md  state-machine.md
scripts/: __init__.py  run_gate_db1.ps1  run_latency_benchmark.py  run_minimax_spike.py  simulate_interruption.py
tests/: __init__.py
web/: .railwayignore  index.html  package-lock.json  package.json  railway.toml  tsconfig.json  tsconfig.test.json
(+179 files in other folders)
