[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "minimax-duplex-voice"
version = "0.1.0"
description = "Interruptible full-duplex voice pipeline using Pipecat, LiveKit, and MiniMax TTS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pipecat-ai[livekit]>=1.0,<2",
  "pydantic-settings>=2.10,<3",
  "structlog>=25.4,<26",
  "websockets>=15,<17",
]

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/duplex_voice"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
